         (patch #3529236) (Sergio).
20120605 ui/gtk/debugger.c: replace deprecated GtkItemFactory,
         GtkItemFactoryEntry and GtkItemFactoryCallback1 in favour of
         GtkUIManager, GtkActionEntry and GtkAction (patch #3531492) (Sergio).
20120605 ui/gtk/gtkjoystick.c: replace deprecated GtkOptionMenu widgets with
         GtkComboBox (patch #3531495) (Sergio).
20120605 ui/gtk/binary.c: plug a memory leak (thanks, cppcheck) (Fred).
20120607 ui/win32/binary.c: plug another memory leak (thanks, cppcheck) (Fred).
20120607 display.c,machine.c,memory.c,rectangle.c,rzx.c,tape.c,ui/widget/text.c:
         switch to using libspectrum_realloc over raw realloc (Fred).
20120607 sound.c: switch to using libspectrum_calloc over raw calloc (Fred).
20120607 event.c,fuse.c,memory.c,mempool.c,periph.c,slt.c,tape.c,utils.c:
         switch to using libspectrum_malloc over raw malloc (Fred).
20120607 settings.pl: switch to using libspectrum_malloc over raw malloc (Fred).
20120607 display.c,event.c,fuse.c,machine.c,memory.c,mempool.c,menu.c,periph.c,
         rzx.c,settings.pl,snapshot.c,sound.c,tape.c,ui.c,utils.c:
         switch to using libspectrum_free over free to match our allocations
         (Fred).
20120612 ui/gtk/gtkui.c: replace deprecated gtk_radio_button_group() with
         gtk_radio_button_get_group() (patch #3534178) (Sergio).
20120612 ui/gtk/{debugger.c,gtkui.c,memory.c}: replace direct access to struct
         members with accessor functions (patch #3534179) (Sergio).
20120618 ui/gtk/{Makefile.am,gtkcompat.h,options.pl}: replace deprecated
         gtk_combo_box_new_text and gtk_combo_box_append_text symbols with
         gtk_combo_box_text_new and gtk_combo_box_text_append_text respectively
         (patch #3534182) (Sergio).
20120618 ui/gtk/{gtkinternals.h,pixmaps.c,statusbar.c}: replace pixmaps in the
         statusbar with pixbufs for GTK+ 3 compatibility (patch #3535005)
         (Sergio).